--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 					<p>
 						<small>Dr. Julio César Ramírez-Pacheco </small>
 					</p>
+					<p style="font-size:1.5rem">Slides available: <a style="color:lightblue;" href="https://monoxide2000.github.io/slidesADV">https://monoxide2000.github.io/slidesADV</a></p>
+
 				</section>
 
 				<section data-transition="zoom">
